# HighTide

./: .bazelrc  .gitignore  .gitmodules  CLAUDE.md  MODULE.bazel  PLAN.md
.claude/skills/debug-design/: SKILL.md
.claude/skills/generate-sram/: SKILL.md
.claude/skills/improve-skills/: SKILL.md
.claude/skills/new-design/: SKILL.md
.claude/skills/openroad-tcl/refs/: rsz.md
.claude/skills/optimize-ppa/: SKILL.md
.claude/skills/port-design/: SKILL.md
.claude/skills/shared/: congestion-analysis.md  image-generation.md
.claude/skills/update-design/: SKILL.md
.claude/skills/update-results/: SKILL.md
.github/workflows/: audit-updates.yml  find-designs.yml
designs/asap7/NVDLA/partition_a/: BUILD.bazel
designs/asap7/NVDLA/partition_c/: BUILD.bazel  constraint.sdc
designs/asap7/NVDLA/partition_m/: BUILD.bazel
designs/asap7/NVDLA/partition_o/: BUILD.bazel
designs/asap7/NVDLA/partition_p/: BUILD.bazel
designs/asap7/NyuziProcessor/: BUILD.bazel  constraint.sdc
designs/asap7/bp_processor/bp_quad/: BUILD.bazel
designs/asap7/cnn/: BUILD.bazel
designs/asap7/coralnpu/: BUILD.bazel  config.mk
designs/asap7/eyeriss/: BUILD.bazel
designs/asap7/floonoc/: constraint.sdc
designs/asap7/lfsr/: constraint.sdc
designs/asap7/litedram/: constraint.sdc
designs/asap7/liteeth/: constraint.sdc
designs/asap7/sha3/: constraint.sdc
designs/asap7/snitch_cluster/: BUILD.bazel
designs/asap7/ternip/: constraint.sdc
designs/nangate45/NVDLA/partition_a/: constraint.sdc
designs/nangate45/NVDLA/partition_c/: constraint.sdc
designs/nangate45/NVDLA/partition_m/: constraint.sdc
designs/nangate45/NVDLA/partition_o/: constraint.sdc
designs/nangate45/NVDLA/partition_p/: constraint.sdc
designs/nangate45/NyuziProcessor/: BUILD.bazel
designs/nangate45/bp_processor/bp_uno/: constraint.sdc
designs/nangate45/cnn/: BUILD.bazel  macro_placement.tcl
designs/nangate45/floonoc/: constraint.sdc
designs/nangate45/lfsr/: constraint.sdc
designs/nangate45/litedram/: constraint.sdc
designs/nangate45/liteeth/: constraint.sdc
designs/nangate45/sha3/: constraint.sdc
designs/nangate45/ternip/: constraint.sdc
designs/nangate45/vortex/: constraint.sdc
designs/sky130hd/NVDLA/partition_a/: constraint.sdc
designs/sky130hd/NVDLA/partition_m/: constraint.sdc
designs/sky130hd/bp_processor/bp_uno/: BUILD.bazel  macro_placement.tcl
designs/sky130hd/cnn/: BUILD.bazel  config.mk  constraint.sdc
designs/sky130hd/cnn/sram/lef/: fakeram_w16_l32768.lef  fakeram_w16_l512.lef  fakeram_w16_l8192.lef  fakeram_w64_l256.lef
designs/sky130hd/cnn/sram/lib/: fakeram_w16_l32768.lib  fakeram_w16_l512.lib  fakeram_w16_l8192.lib  fakeram_w64_l256.lib
designs/sky130hd/coralnpu/: BUILD.bazel  config.mk  constraint.sdc
designs/sky130hd/coralnpu/sram/lef/: fakeram_2048x128_1rw.lef  fakeram_512x128_1rw.lef
designs/sky130hd/coralnpu/sram/lib/: fakeram_2048x128_1rw.lib  fakeram_512x128_1rw.lib
designs/sky130hd/eyeriss/sram/: fakeram_sky130hd.cfg
designs/sky130hd/eyeriss/sram/lef/: fakeram_12x2048_1r1w.lef  fakeram_21x512_1r1w.lef  fakeram_7x512_1r1w.lef  fakeram_8x4096_1r1w.lef
designs/sky130hd/eyeriss/sram/lib/: fakeram_12x128_1rw.lib  fakeram_12x2048_1r1w.lib  fakeram_13x256_1rw.lib  fakeram_21x32_1r1w.lib  fakeram_21x512_1r1w.lib  fakeram_7x512_1r1w.lib  fakeram_8x4096_1r1w.lib
designs/sky130hd/lfsr/: constraint.sdc
designs/sky130hd/litedram/: constraint.sdc
designs/sky130hd/litepci/: BUILD.bazel
designs/sky130hd/openc906/: BUILD.bazel  constraint.sdc
designs/sky130hd/openc910/: BUILD.bazel  constraint.sdc
designs/sky130hd/opene902/: BUILD.bazel  constraint.sdc
designs/sky130hd/opene906/: BUILD.bazel  constraint.sdc
designs/sky130hd/ternip/: constraint.sdc
designs/sky130hd/vortex/: BUILD.bazel  config.mk
designs/src/NVDLA/: DECISIONS.md
designs/src/NVDLA/dev/: gen_ff_rams.py
designs/src/NyuziProcessor/: DECISIONS.md
designs/src/bp_processor/: BUILD.bazel  DECISIONS.md
designs/src/bp_processor/dev/: gen_macros_v.py
designs/src/cnn/: DECISIONS.md
designs/src/cnn/dev/: gen_fakeram_sky130hd.py
designs/src/coralnpu/: DECISIONS.md
designs/src/coralnpu/dev/: fakeram_sky130hd.cfg
designs/src/floonoc/: DECISIONS.md
designs/src/litedram/: DECISIONS.md  litedram_core.v
designs/src/liteeth/: DECISIONS.md  README.md
designs/src/litepci/: DECISIONS.md
designs/src/openc906/: BUILD.bazel  DECISIONS.md  aq_spsram_stubs.v
designs/src/openc906/dev/: setup.sh
designs/src/openc910/: BUILD.bazel  DECISIONS.md
designs/src/opene902/: BUILD.bazel  DECISIONS.md  opene902.v
designs/src/opene902/dev/: setup.sh
designs/src/opene906/: BUILD.bazel  DECISIONS.md  pa_spsram_stubs.v
designs/src/opene906/dev/: setup.sh
designs/src/snitch_cluster/dev/: cluster_cfg.json  generate_sram_mapping.py  setup.sh
designs/src/ternip/: DECISIONS.md
designs/src/ternip/dev/: gen_fakeram.py
designs/src/vortex/: DECISIONS.md
docs/: adding-designs.md  architecture.md
k8s/: design_resources.conf  job-template.yaml  run.sh
tools/: bazel_to_config_mk.sh  clear-cache.sh  diff_sram_size.sh  fetch_cache.sh  reconstruct_cfg_from_lef.py  regenerate_sram.sh  run_orfs.sh
