module(
    name = "hightide2",
    version = "0.0.1",
)

bazel_dep(name = "rules_python", version = "1.8.5")
bazel_dep(name = "bazel-orfs")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.13", is_default = True)

git_override(
    module_name = "bazel-orfs",
    remote = "https://github.com/The-OpenROAD-Project/bazel-orfs.git",
    commit = "d998bbff78c455718bd1a0191b4aa89ef9addac1",
)

orfs = use_extension("@bazel-orfs//:extension.bzl", "orfs_repositories")

# Docker image must match the bazel-orfs commit and the ORFS submodule.
orfs.default(
    image = "docker.io/openroad/orfs:26Q1-656-g97416b2e4",
)

use_repo(orfs, "docker_orfs")
