module(
    name = "hightide2",
    version = "0.0.1",
)

bazel_dep(name = "rules_python", version = "1.8.5")
bazel_dep(name = "bazel-orfs")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.13", is_default = True)

git_override(
    module_name = "bazel-orfs",
    remote = "https://github.com/The-OpenROAD-Project/bazel-orfs.git",
    commit = "da4ffdf2752f377c6e66aa942fae3e24a36ad99a",
)

orfs = use_extension("@bazel-orfs//:extension.bzl", "orfs_repositories")

# Docker image must match the bazel-orfs commit and the ORFS submodule.
orfs.default(
    image = "docker.io/openroad/orfs:26Q2-32-gca75a11e2",
    sha256 = "a50429aaed8cbaf2103b46196507f7c9445c95066d00a91953bd47c27dad6f31",
)

use_repo(orfs, "docker_orfs")
