load("//:defs.bzl", "hightide_design")

filegroup(
    name = "sram_lefs",
    srcs = glob(["sram/lef/*.lef"]),
)

filegroup(
    name = "sram_libs",
    srcs = glob(["sram/lib/*.lib"]),
)

hightide_design(
    name = "NyuziProcessor",
    platform = "asap7",
    verilog_files = ["//designs/src/NyuziProcessor:rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": [":sram_lefs"],
        "ADDITIONAL_LIBS": [":sram_libs"],
        "PDN_TCL": [":pdn.tcl"],
        # PRE_CTS_TCL (pre_cts.tcl) reset dbSourceType TIMING->NETLIST to
        # work around CTS-0105 (OpenROAD #10177, closed 2026-05-21); removed
        # on the bazel-orfs 553c1c3 / OpenROAD 299f3015 upgrade.
    },
    arguments = {
        "SYNTH_HIERARCHICAL": "1",
        "CORE_UTILIZATION": "65",
        "PLACE_DENSITY_LB_ADDON": "0.22",
        "MACRO_PLACE_HALO": "6 6",
        "TNS_END_PERCENT": "100",
        # SKIP_CTS_REPAIR_TIMING (ODB-1200) and SKIP_INCREMENTAL_REPAIR
        # (ODB-0445) removed on the bazel-orfs 553c1c3 / OpenROAD 299f3015
        # upgrade — the OpenSTA resizer rewrite fixes ODB-1200
        # (InsertBufferBeforeLoads) and the ODB-0445 dbTechNonDefaultRule
        # undo path; full repair_timing runs again.
    },
)
