load("//:defs.bzl", "hightide_design")

filegroup(
    name = "sram_lefs",
    srcs = glob(["sram/lef/*.lef"]),
)

filegroup(
    name = "sram_libs",
    srcs = glob(["sram/lib/*.lib"]),
)

# Eyeriss v2 sparse-CNN accelerator. The ASIC top is `TOP` — the FPGA-only
# wrappers (TOP_integration*, UART, display, IO_processing) are dropped at
# RTL-generation time. With a 2x2 cluster-group array, each cluster group
# instantiates 39 SRAM macros (9 iact-addr + 9 iact-data + 3 psum-data in GLB
# plus 9 iact-spad + 9 weight-spad + 9 psum-spad per PE cluster), so the full
# top brings in ~157 SRAM blocks plus one 4096x8 psum-rearrange BRAM.
hightide_design(
    name = "eyeriss",
    top = "TOP",
    platform = "asap7",
    verilog_files = ["//designs/src/eyeriss:rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": [":sram_lefs"],
        "ADDITIONAL_LIBS": [":sram_libs"],
    },
    arguments = {
        "SYNTH_HIERARCHICAL": "1",
        # PPA-tuned: the prior 5-ns / util-40 build hit Fmax 418 MHz with
        # +2607 ps of setup headroom and 14 % GRT congestion at 0
        # overflow.  Halve the clock to 2.5 ns (target ~400 MHz) and push
        # util 40 → 45.  An earlier sweep at util=55 / halo=4 hit MPL-0040
        # — at that density macros + halo occupied 97 % of the floorplan
        # and the annealer had no slack to find a valid solution.  Keep
        # halo at the original 5 µm.
        "CORE_UTILIZATION": "45",
        "PLACE_DENSITY_LB_ADDON": "0.20",
        "MACRO_PLACE_HALO": "5 5",
        "TNS_END_PERCENT": "100",
        # ODB-1200 in CTS repair_timing — split_load load-list invalidation
        # trips InsertBufferBeforeLoads on the GLB iact SRAMs (OpenROAD #75).
        # Drop split_load from the move sequence rather than the heavier
        # SKIP_CTS_REPAIR_TIMING — keeps the rest of repair_timing active so
        # the small (~40 ps) hold violations get patched too.
        "SETUP_MOVE_SEQUENCE": "unbuffer,sizeup,swap,buffer,clone",
        # Post-GRT repair_timing on the Psum spad/SRAM write paths makes
        # ~5 ps of slack progress per iteration on the 193-macro design,
        # which never converges in reasonable time.  Skip the incremental
        # + last-gasp repair passes.
        "SKIP_INCREMENTAL_REPAIR": "1",
        "SKIP_LAST_GASP": "1",
    },
)
