load("//:defs.bzl", "hightide_design")

package(default_visibility = ["//designs/sky130hd/litepci:__subpackages__"])

filegroup(
    name = "sram_lefs",
    srcs = glob(["sram/lef/*.lef"]),
)

filegroup(
    name = "sram_libs",
    srcs = glob(["sram/lib/*.lib"]),
)

# Placeholder LEF/LIB for the pcie_us Xilinx PCIe hard-IP blackbox.
# Committed (not regenerated at flow time) so synth_odb has a master for
# the blackbox; produced by designs/src/litepci/dev/gen_phy_lef.py via
# dev/gen.sh. See designs/src/litepci/BUILD.bazel.
filegroup(
    name = "phy_lefs",
    srcs = glob(["phy/lef/*.lef"]),
)

filegroup(
    name = "phy_libs",
    srcs = glob(["phy/lib/*.lib"]),
)

# LitePCIe core (kcu105 / USPCIEPHY config) on sky130hd.
# See designs/asap7/litepci/BUILD.bazel for the design-side rationale.
hightide_design(
    name = "litepci",
    top = "litepcie_core",
    platform = "sky130hd",
    verilog_files = ["//designs/src/litepci:rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": [":sram_lefs", ":phy_lefs"],
        "ADDITIONAL_LIBS": [":sram_libs", ":phy_libs"],
    },
    arguments = {
        "VERILOG_DEFINES": "-D USE_SKY130HD_CELLS",
        # Real-FakeRAM build: dev/inline_fakeram.py wires the 20 large
        # DMA / TLP memories to explicit fakeram instances so STA sees
        # real reg-to-reg paths.  Util / density / halo carried over
        # from the mocked-build route-fix iteration (util 30, halo 100)
        # as a conservative starting point — sky130hd's coarse pitch +
        # 1000×1000 pcie_us + 20 large FakeRAMs is the hardest of the
        # three platforms to route.  Will retune after first real-timing
        # measurement.
        "CORE_UTILIZATION": "30",
        "PLACE_DENSITY": "0.40",
        "MACRO_PLACE_HALO": "100 100",
        "GDS_ALLOW_EMPTY": "fakeram.*|pcie_us",
        # ODB-1200 — drop split_load from SETUP_MOVE_SEQUENCE; skip the
        # post-GRT repair_timing block.  Same workaround as asap7 litepci.
        "SETUP_MOVE_SEQUENCE": "unbuffer,sizeup,swap,buffer,clone",
        "SKIP_INCREMENTAL_REPAIR": "1",
    },
)
