load("//:defs.bzl", "hightide_design")

package(default_visibility = ["//designs/sky130hd/litepci:__subpackages__"])

filegroup(
    name = "sram_lefs",
    srcs = glob(["sram/lef/*.lef"]),
)

filegroup(
    name = "sram_libs",
    srcs = glob(["sram/lib/*.lib"]),
)

# Placeholder LEF/LIB for the pcie_us Xilinx PCIe hard-IP blackbox.
# Committed (not regenerated at flow time) so synth_odb has a master for
# the blackbox; produced by designs/src/litepci/dev/gen_phy_lef.py via
# dev/gen.sh. See designs/src/litepci/BUILD.bazel.
filegroup(
    name = "phy_lefs",
    srcs = glob(["phy/lef/*.lef"]),
)

filegroup(
    name = "phy_libs",
    srcs = glob(["phy/lib/*.lib"]),
)

# LitePCIe core (kcu105 / USPCIEPHY config) on sky130hd.
# See designs/asap7/litepci/BUILD.bazel for the design-side rationale.
hightide_design(
    name = "litepci",
    top = "litepcie_core",
    platform = "sky130hd",
    verilog_files = ["//designs/src/litepci:rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": [":sram_lefs", ":phy_lefs"],
        "ADDITIONAL_LIBS": [":sram_libs", ":phy_libs"],
    },
    arguments = {
        "VERILOG_DEFINES": "-D USE_SKY130HD_CELLS",
        # Real-FakeRAM build: dev/inline_fakeram.py wires the 20 large
        # DMA / TLP memories to explicit fakeram instances so STA sees
        # real reg-to-reg paths.  Util / density / halo carried over
        # from the mocked-build route-fix iteration (util 30, halo 100)
        # as a conservative starting point — sky130hd's coarse pitch +
        # 1000×1000 pcie_us + 20 large FakeRAMs is the hardest of the
        # three platforms to route.  Will retune after first real-timing
        # measurement.
        "CORE_UTILIZATION": "24",  # 30->24 on upgrade: new GRT loops congestion iters at 30
        "PLACE_DENSITY": "0.40",
        "MACRO_PLACE_HALO": "100 100",
        "GDS_ALLOW_EMPTY": "fakeram.*|pcie_us",
        "SETUP_MOVE_SEQUENCE": "unbuffer,sizeup,swap,buffer,clone",
        # bazel-orfs 553c1c3 / OpenROAD 299f3015: post-GRT repair_timing does
        # not converge on this design under the new resizer — it spins ~23 h
        # at 5_1_grt regardless of split_load. ODB-1200 is fixed, but this is
        # the repair-non-convergence pattern, so skip the post-GRT pass (the
        # DECISIONS note had pre-flagged "if it recurs, add this back").
        "SKIP_INCREMENTAL_REPAIR": "1",
        # Tighter CTS clustering — force a more-balanced clock tree to
        # reduce the ~9.3 ns launch/capture skew (default sky130hd value
        # is ~100 um).  Trades a few extra clock buffers for hopefully
        # lower per-leaf insertion-delay variance across the 21-macro
        # spread.
        "CTS_BUF_DISTANCE": "60",
    },
)
