load("//:defs.bzl", "hightide_design")

hightide_design(
    name = "opene906",
    top = "openE906",
    platform = "sky130hd",
    verilog_files = ["//designs/src/opene906:rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
    },
    arguments = {
        "CORE_UTILIZATION": "40",
        "CORE_ASPECT_RATIO": "1.0",
        "CORE_MARGIN": "12",
        "PLACE_DENSITY": "0.6",
        "TNS_END_PERCENT": "100",
        # ICACHE_2K + DCACHE_2K: selects the smallest cache configuration,
        # using pa_spsram_* behavioral stubs that yosys maps to FFs.
        # Switch to FakeRAM macros (via /generate-sram) for a realistic benchmark.
        "VERILOG_DEFINES": "-D ICACHE_2K -D DCACHE_2K",
        # Force all inferred memories below this bit-count to FF arrays.
        # The largest cache SRAM (pa_f_spsram_256x32 = 8192 bits) is well under 65536.
        "SYNTH_MEMORY_MAX_BITS": "65536",
    },
)
