load("//:defs.bzl", "hightide_design")
load("//designs/src/bp_processor:defs.bzl", "BP_COMMON_ARGS")

_ARGS = dict(BP_COMMON_ARGS)

_ARGS.update({
    # sky130hd port (140 macros + ~710k insts). RTLMP's pin-edge-blind,
    # mixed-orientation clustering wedged adjacent icache `data_mems[*]`
    # macros into met2-pin escape collisions (capacity:0 overflow on a
    # large die, then GRT-0229 saturation when the halo was bumped). Same
    # failure shape as cnn-sky130hd / NVDLA partition_c. Fix: fixed-grid
    # MACRO_PLACEMENT_TCL (all macros R0, channel under each row) so every
    # macro's bottom pin edge faces clear routing space; macros set FIRM
    # so the post-source rtl_macro_placer leaves them alone. The grid
    # needs ~7600 µm of y to fit 10 rows + channels, so size the die at
    # 8000 µm square (CORE_UTILIZATION=30's 5887 µm core couldn't host
    # the grid). Regenerate the placement file:
    #   python3 tools/gen_macro_grid.py \
    #     designs/src/bp_processor/dev/generated/bp_uno_sky130hd_macros.txt \
    #     designs/sky130hd/bp_processor/bp_uno/macro_placement.tcl \
    #     --gap-x 250 --chan 450
    "DIE_AREA": "0 0 8000 8000",
    "CORE_AREA": "20 20 7980 7980",
    "PLACE_PINS_ARGS": "-min_distance 20 -min_distance_in_tracks",
    "MACRO_BLOCKAGE_HALO": "0.5",
    "PLACE_DENSITY_LB_ADDON": "0.10",
})

hightide_design(
    name = "bp_processor",
    platform = "sky130hd",
    verilog_files = [
        "//designs/src/bp_processor:rtl",
        "//designs/sky130hd/bp_processor:macros",
    ],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": ["//designs/sky130hd/bp_processor:sram_lefs"],
        "ADDITIONAL_LIBS": ["//designs/sky130hd/bp_processor:sram_libs"],
        "MACRO_PLACEMENT_TCL": [":macro_placement.tcl"],
    },
    arguments = _ARGS,
    stage_data = {"synth": ["//designs/src/bp_processor:rtl_data"]},
)
